[gd_scene load_steps=4 format=2]

[ext_resource path="res://pass/pass.gd" type="Script" id=2]

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 0.235294, 0.635294, 0.988235, 1 )

[sub_resource type="StyleBoxFlat" id=3]
bg_color = Color( 0.0666667, 0.768627, 0.937255, 1 )

[node name="pass" type="Control"]
pause_mode = 2
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -100.0
margin_top = -34.0
margin_right = 100.0
margin_bottom = 34.0

[node name="ResumeBtn" type="Button" parent="VBoxContainer"]
margin_right = 200.0
margin_bottom = 30.0
rect_min_size = Vector2( 200, 30 )
custom_colors/font_color_disabled = Color( 0.905882, 1, 0.0901961, 1 )
custom_colors/font_color_focus = Color( 0.858824, 0.92549, 0.282353, 1 )
custom_colors/font_color = Color( 0.905882, 1, 0.0901961, 1 )
custom_colors/font_color_hover = Color( 0.905882, 1, 0.0901961, 1 )
custom_colors/font_color_pressed = Color( 0.905882, 1, 0.0901961, 1 )
custom_styles/hover = SubResource( 2 )
custom_styles/normal = SubResource( 3 )
text = "Resume"

[node name="Control" type="Control" parent="VBoxContainer"]
margin_top = 34.0
margin_right = 200.0
margin_bottom = 34.0

[node name="QuitBtn" type="Button" parent="VBoxContainer"]
margin_top = 38.0
margin_right = 200.0
margin_bottom = 68.0
rect_min_size = Vector2( 200, 30 )
custom_colors/font_color_disabled = Color( 0.905882, 1, 0.0901961, 1 )
custom_colors/font_color_focus = Color( 0.858824, 0.92549, 0.282353, 1 )
custom_colors/font_color = Color( 0.905882, 1, 0.0901961, 1 )
custom_colors/font_color_hover = Color( 0.905882, 1, 0.0901961, 1 )
custom_colors/font_color_pressed = Color( 0.905882, 1, 0.0901961, 1 )
custom_styles/hover = SubResource( 2 )
custom_styles/normal = SubResource( 3 )
text = "Quit"

[connection signal="pressed" from="VBoxContainer/ResumeBtn" to="." method="_on_ResumeBtn_pressed"]
[connection signal="pressed" from="VBoxContainer/QuitBtn" to="." method="_on_QuitBtn_pressed"]
